<resources>
  <string name="settingsSelectThisAccount">Select Account %1$s</string>
  <string name="settingsMoreInformation">More Information</string>
  <string name="settingsAddLibrary">+ Add Library</string>
  <string name="settingsMyLibraries">My Libraries</string>
  <string name="settings">Settings</string>
  <string name="settingsAbout">About Palace</string>
  <string name="settingsAboutSummary" />
  <string name="settingsAccounts">Libraries</string>
  <string name="settingsAccountsSummary">Add, remove, or configure libraries</string>
  <string name="settingsAcknowledgements">Acknowledgements</string>
  <string name="settingsAcknowledgementsSummary" />
  <string name="settingsCommit">Commit</string>
  <string name="settingsBuildSummary" />
  <string name="settingsCancel">Cancel</string>
  <string name="settingsCardCreatorLabel">Don\'t have a library card?</string>
  <string name="settingsCardCreatorSignUp">Sign up</string>
  <string name="settingsCOPPADeleteBooks">Delete books?</string>
  <string name="settingsCOPPADeleteBooksConfirm">Changing your age will remove all books downloaded from the current account.</string>
  <string name="settingsCOPPAOver13">I am over 13</string>
  <string name="settingsCustomOPDS">Custom OPDS Feed</string>
  <string name="settingsCustomOPDSCreate">Create</string>
  <string name="settingsCustomOPDSInvalidURI">Not a valid URI.</string>
  <string name="settingsCustomOPDSURL">Custom feed URL…</string>
  <string name="settingsDebug">Debug options</string>
  <string name="settingsDebugSummary" />
  <string name="settingsDelete">Delete</string>
  <string name="settingsDetails">Details</string>
  <string name="settingsDevAddCustomOpdsFeed">Add Custom OPDS Feed</string>
  <string name="settingsDevAdobeDrmActivations">Adobe DRM Activations</string>
  <string name="settingsDevCacheDir">Show Cache Directory</string>
  <string name="settingsDevCardCreatorUserNewYork">Card Creator: Pretend the user is in New York</string>
  <string name="settingsDevCrash">Crash</string>
  <string name="settingsDevCrashlytics">Crashlytics</string>
  <string name="settingsDevCrashlyticsCurrentUserId">Current Crashlytics User ID</string>
  <string name="settingsDevDrmSupport">DRM Support</string>
  <string name="settingsDevEnableHiddenLibraries">Enable Hidden Libraries</string>
  <string name="settingsDevEnableManualLCPPassphrase">Enable Manual LCP Passphrase</string>
  <string name="settingsDevEnableTimeTracking">Enable Time Tracking</string>
  <string name="settingsDevFailNextStartup">Cause the next application startup to fail</string>
  <string name="settingsDevForgetAllAnnouncements">Forget All Announcements</string>
  <string name="settingsDevPlaceholder">Placeholder</string>
  <string name="settingsDevSendAnalytics">Send Analytics</string>
  <string name="settingsDevSendErrorLogs">Send Error Logs</string>
  <string name="settingsDevShowErrorPage">Show Error Page</string>
  <string name="settingsDevShowSupportedBooks">Only show supported books (Uncheck to show unsupported books)</string>
  <string name="settingsDevSyncAccounts">Sync Accounts</string>
  <string name="settingsDevRebootNewUI">Reboot In New UI Mode</string>
  <string name="settingsDevTestingFeatures">Testing Features</string>
  <string name="settingsDevToggleOpenEBooksQAAccount">Toggle OpenEBooks QA Account</string>
  <string name="settingsDevUserSeenLibrarySelection">User has seen library selection screen?</string>
  <string name="settingsDevUserSeenBatterySaver">User has seen battery saver screen?</string>
  <string name="settingsDocumentation">Documentation</string>
  <string name="settingsEULA">User Agreement</string>
  <string name="settingsEULAStatement">I agree to the terms of the End User License Agreement.</string>
  <string name="settingsEULASummary" />
  <string name="settingsFaq">FAQ</string>
  <string name="settingsFaqSummary" />
  <string name="settingsPrivacy">Privacy Policy</string>
  <string name="settingsPrivacySummary" />
  <string name="settingsInfo">App info</string>
  <string name="settingsLicense">Software Licenses</string>
  <string name="settingsLicenseSummary" />
  <string name="settingsLogin">Sign in</string>
  <string name="settingsLoginWith">Sign in with %1$s</string>
  <string name="settingsLoginAlternatives">Alternative Login Methods</string>
  <string name="settingsLogout">Sign out</string>
  <string name="settingsPassword">Password</string>
  <string name="settingsPasswordHide">Hide password</string>
  <string name="settingsPasswordShow">Show password</string>
  <string name="settingsPlaceholder">Lorem ipsum dolor sit amet, probatus volutpat has at, vis adhuc iuvaret omittantur an, sadipscing conclusionemque his ad. Eam ut simul tempor. Primis consetetur appellantur vim eu, eum an iudico dolorum. Ad vis utamur honestatis, sanctus debitis referrentur an eam.</string>
  <string name="settingsReportIssue">Report an issue…</string>
  <string name="settingsSyncBookmarks">Sync bookmarks</string>
  <string name="settingsTapToDebug">Debug mode in %1$d&#8230;</string>
  <string name="settingsUserName">User Name</string>
  <string name="settingsVersion">App version</string>
  <string name="settingsVersionSummary" />
  <string name="settingsVersionCore">Core version</string>
  <string name="settingsVersionCoreSummary" />
  <string name="settingsDebugTransifex">This string should have been translated by Transifex.</string>
  <string name="accountAdd">Add Library</string>
  <string name="accountAgeVerification">Age Verification</string>
  <string name="accountCOPPADeleteBooks">Delete books?</string>
  <string name="accountCOPPADeleteBooksConfirm">Changing your age will remove all books downloaded from the current account.</string>
  <string name="accountCancel">Cancel</string>
  <string name="accountCardCreatorDialogCancel">Cancel</string>
  <string name="accountCardCreatorDialogOpenSettings">Open Settings</string>
  <string name="accountCardCreatorDialogOpenSettingsMessage">The Palace App requires a one-time location check to create a virtual library card. Your location is currently not shared. To enable location access for the Palace App, please adjust your location settings.</string>
  <string name="accountCardCreatorDialogPermissionsMessage">To create your virtual library card, the Palace App will use your location one time to verify your library service area. Click \"OK\" to proceed.</string>
  <string name="accountCardCreatorLabel">Don\'t have a library card?</string>
  <string name="accountCardCreatorLocationFailed">There was an error retrieving your location.</string>
  <string name="accountCardCreatorSignUp">Create Card</string>
  <string name="accountCardCreatorSignUpMessage">The Palace App will use your location one time to verify your library service area.</string>
  <string name="accountCreateCard">Create Card</string>
  <string name="accountCreation">Library Account Creation</string>
  <string name="accountCreationFailed">Library creation failed</string>
  <string name="accountCreationFailedMessage">The library could not be created.</string>
  <string name="accountCustomOPDS">Custom OPDS Feed URL</string>
  <string name="accountDelete">Remove</string>
  <string name="accountEULA">End User License Agreement</string>
  <string name="accountEULAStatement">By signing in, you agree to the End User License Agreement.</string>
  <string name="accountForgotPassword">Forgot your password?</string>
  <string name="accountGoBack">Go Back</string>
  <string name="accountLicenses">Content Licenses</string>
  <string name="accountLogin">Sign in</string>
  <string name="accountLoginAlternatives">Alternative Login Methods</string>
  <string name="accountLoginRequired">Please sign in to continue.</string>
  <string name="accountLoginWith">Sign in with %1$s</string>
  <string name="accountLogout">Sign out</string>
  <string name="accountMenuRefresh">Reload</string>
  <string name="accountMenuSearch">Search</string>
  <string name="accountMore">More options</string>
  <string name="accountPassword">Password</string>
  <string name="accountPasswordResetFailed">Sorry, we weren\'t able to find a usable app to reset your password. Please send email to %1$s if you need to report an issue.</string>
  <string name="accountPasswordShow">Show %1$s</string>
  <string name="accountPickerTitle">Find Your Library</string>
  <string name="accountPlaceholder">Lorem ipsum dolor sit amet, probatus volutpat has at, vis adhuc iuvaret omittantur an, sadipscing conclusionemque his ad. Eam ut simul tempor. Primis consetetur appellantur vim eu, eum an iudico dolorum. Ad vis utamur honestatis, sanctus debitis referrentur an eam.</string>
  <string name="accountPrivacyPolicy">Privacy Policy</string>
  <string name="accountRegistryCreating">Creating a library…</string>
  <string name="accountRegistryEmpty">No libraries are available.</string>
  <string name="accountRegistryNoLocation">You can search for your library by name, branch location, or your own location.</string>
  <string name="accountRegistryRefresh">Refresh</string>
  <string name="accountRegistryRetrieving">Retrieving libraries from the registry…</string>
  <string name="accountRegistrySelect">Please select a library…</string>
  <string name="accountReportFailed">Sorry, we weren\'t able to find a usable app to contact support. Please send email to %1$s if you need to report an issue.</string>
  <string name="accountReportIssue">Report an issue…</string>
  <string name="accountSAML20LoginLabel">Sign in with SAML 2.0 WEB SSO</string>
  <string name="accountSAML20NoAccessToken">Failed to retrieve an access token from the URI: %1$s</string>
  <string name="accountSAML20NoPatronInfo">Failed to retrieve patron info from the URI: %1$s</string>
  <string name="accountSearchHint">Search accounts&#8230;</string>
  <string name="accountSyncBookmarks">Sync bookmarks</string>
  <string name="accountUserName">User Name</string>
  <string name="accountWantChildCard">Want a card for your child?</string>
  <string name="accounts">Libraries</string>
  <string name="accountsDelete">@string/accountDelete</string>
  <string name="accountsDeleteConfirm">Are you sure you want to remove \"%1$s\" from this device?</string>
  <string name="accountsDeleteConfirmTitle">Remove library</string>
  <string name="accountsDeletionFailed">Library removal failed</string>
  <string name="accountsDeletionFailedMessage">The library could not be removed.</string>
  <string name="accountsDetails">Library Details</string>
  <string name="currentlyBrowsing">You\'re currently browsing</string>
  <string name="tabBooks">My Books</string>
  <string name="tabCatalog">Catalog</string>
  <string name="tabHolds">Reservations</string>
  <string name="tabProfile">Profile</string>
  <string name="tabSettings">Settings</string>
  <string name="eula_disagree">Disagree</string>
  <string name="eula_agree">Agree</string>
  <string name="migrationFailure">There were one or more problems migrating your data&#8230;</string>
  <string name="migrationSuccess">Your data was migrated successfully!</string>
  <string name="migrationSendReport">Send Report</string>
  <string name="migrationOK">OK</string>
  <string name="selectionTitle">Read E-Books from Your Library</string>
  <string name="selectionButton">Find Your Library</string>
  <string name="selectionAlternateButton">Add a Library Later</string>
  <string name="contentDescriptionTutorialPage">Tutorial page</string>
  <string name="contentDescriptionSkipButton">Skip button</string>
  <string name="contentDescriptionStep1">Step 1 - Find your library</string>
  <string name="contentDescriptionStep2">Step 2 - Can\'t find your library? Go to the Palace Bookshelf for more than 10000 free titles that you can enjoy now</string>
  <string name="contentDescriptionStep3">Step 3 - Read. Listen. Enjoy!</string>
</resources>