<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/debugToolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/debugToolbarBackIconTouch"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/accountGoBack"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/debugToolbarBackIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:focusable="false"
                android:src="@drawable/arrow_left"
                app:tint="@color/PalacePrimaryForegroundColor"
                app:tintMode="multiply" />
        </FrameLayout>

        <TextView
            android:id="@+id/debugToolbarTitle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="DRM"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/debugToolbarBackIconTouch"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/settingsDevDrmSupport"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/debugDrmSupport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/settingsDevAdobeDrmActivations"
        android:textSize="18sp"
        android:textStyle="bold" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical|horizontal">

        <TableLayout
            android:id="@+id/debugDrmAdobeActivations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView android:text="@string/settingsDevPlaceholder" />

                <TextView android:text="@string/settingsDevPlaceholder" />

                <TextView android:text="@string/settingsDevPlaceholder" />

                <TextView android:text="@string/settingsDevPlaceholder" />

                <TextView android:text="@string/settingsDevPlaceholder" />
            </TableRow>
        </TableLayout>
    </HorizontalScrollView>

</LinearLayout>